fixing image links on mobile devices

--- a/src/components/Inventory.css
+++ b/src/components/Inventory.css
@@ -58,6 +58,7 @@
 @media all and (max-width: 600px) {
     .inventory{
         width: 100%;
+        margin-top: 1em;
     }
     .item{
         font-size: .8em;
