--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -13,6 +13,7 @@
 
 .item_image{
     width: 3em;
+    pointer-events: none;
 }
 
 .inventory_info{
